View Selected in Graph Editor (Only Selected Curve Keyframes) takes hidden keys into account when calculating zoom #67873

Closed
opened 2019-07-29 09:14:50 +02:00 by Roman · 8 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: 507ffee6e1
Worked: (optional)

Short description of error
Selects hidden Vertex When Only Selected Curve keyframes is enabled,graph_editor_zoom.blend

{F7634778}]

Exact steps for others to reproduce the error
When Only Selected Curve keyframes is enabled, the hidden Vertex is Selects.
View Selected command does not work correctly
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: `507ffee6e1` Worked: (optional) **Short description of error** Selects hidden Vertex When Only Selected Curve keyframes is enabled,[graph_editor_zoom.blend](https://archive.blender.org/developer/F7634777/graph_editor_zoom.blend) {[F7634778](https://archive.blender.org/developer/F7634778/Zoom3.gif)}] **Exact steps for others to reproduce the error** When Only Selected Curve keyframes is enabled, the hidden Vertex is Selects. View Selected command does not work correctly [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @roman-13

Added subscriber: @roman-13
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-07-29 10:00:37 +02:00
Member

Can confirm.

Same is true for 2.79 (so not 100% sure this is intended in certain scenarios?).
Confirming for now though, seems reasonable to only frame selected curves keyframes (if this setting is enabled...)

Can confirm. Same is true for 2.79 (so not 100% sure this is intended in certain scenarios?). Confirming for now though, seems reasonable to only frame selected curves keyframes (if this setting is enabled...)

Added subscriber: @Pavel_Blend

Added subscriber: @Pavel_Blend

This behavior also bothers me.
If you enable the "Only Selected Curve Keyframes" mode, then when you press the A key, hidden keyframes will be selected.
I would like the A key select to only visible keyframes.

This behavior also bothers me. If you enable the "Only Selected Curve Keyframes" mode, then when you press the A key, hidden keyframes will be selected. I would like the A key select to only visible keyframes.

Added subscriber: @StanislavOvcharov

Added subscriber: @StanislavOvcharov
Philipp Oeser changed title from View Selected in Graph Editor to View Selected in Graph Editor (Only Selected Curve Keyframes) takes hidden keys into account when calculating zoom 2019-11-12 18:47:58 +01:00

This issue was referenced by 355905cb02

This issue was referenced by 355905cb0278c368059fdecef8735b731d97b97c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67873
No description provided.